--- a/package.json
+++ b/package.json
@@ -17,23 +17,25 @@
 		"test:e2e": "playwright test"
 	},
 	"devDependencies": {
-		"@eslint/compat": "^1.2.5",
-		"@eslint/js": "^9.18.0",
-		"@playwright/test": "^1.49.1",
-		"@sveltejs/adapter-netlify": "^4.4.0",
-		"@sveltejs/kit": "^2.16.0",
-		"@sveltejs/vite-plugin-svelte": "^5.0.0",
-		"eslint": "^9.18.0",
+		"@eslint/compat": "^1.2.6",
+		"@eslint/js": "^9.19.0",
+		"@playwright/test": "^1.50.1",
+		"@sveltejs/adapter-netlify": "^4.4.1",
+		"@sveltejs/kit": "^2.17.0",
+		"@sveltejs/vite-plugin-svelte": "^5.0.3",
+		"eslint": "^9.19.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^2.46.1",
 		"globals": "^15.14.0",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
-		"svelte": "^5.0.0",
-		"svelte-check": "^4.0.0",
-		"typescript": "^5.0.0",
-		"typescript-eslint": "^8.20.0",
-		"vite": "^6.0.0",
-		"vitest": "^3.0.0"
-	}
+		"svelte": "^5.19.6",
+		"svelte-check": "^4.1.4",
+		"tesseract.js": "^6.0.0",
+		"typescript": "^5.7.3",
+		"typescript-eslint": "^8.22.0",
+		"vite": "^6.0.11",
+		"vitest": "^3.0.4"
+	},
+	"packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447"
 }
